--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,9 @@
         android:roundIcon="@drawable/icone"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Play_Quiz"></activity>
-        <activity android:name=".WebView" />
+        <activity android:name=".Explicacao"></activity>
+        <activity android:name=".Play_Quiz" />
+        <activity android:name=".FaunaeFlora" />
         <activity
             android:name=".Funcionalidades"
             android:screenOrientation="portrait" />
